force-app/main/default/objects/Recording__c/Recording__c.object-meta.xml
<CustomObject>
    <label>Recording</label>
    <nameField>
        <label>Recording Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recordings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>