force-app/main/default/objects/Recording__c/fields/Drive_Link__c.field-meta.xml
<CustomField>
    <fullName>Drive_Link__c</fullName>
    <label>Drive Link</label>
    <type>Url</type>
</CustomField>