force-app/main/default/objects/Recording__c/fields/Note_Box__c.field-meta.xml
<CustomField>
    <fullName>Note_Box__c</fullName>
    <label>Note Box</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>