force-app/main/default/objects/Recording__c/fields/Sharing_Type__c.field-meta.xml
<CustomField>
    <fullName>Sharing_Type__c</fullName>
    <label>Sharing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Public</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>Internal User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>