force-app/main/default/objects/Recording__c/recordTypes/Board_Recording.recordType-meta.xml
<RecordType>
    <fullName>Board_Recording</fullName>
    <active>true</active>
    <label>Board Recording</label>
</RecordType>