force-app/main/default/objects/Recording__c/recordTypes/Client_Meeting.recordType-meta.xml
<RecordType>
    <fullName>Client_Meeting</fullName>
    <active>true</active>
    <label>Client Meeting</label>
</RecordType>