force-app/main/default/objects/Recording__c/recordTypes/Experience_Talk.recordType-meta.xml
<RecordType>
    <fullName>Experience_Talk</fullName>
    <active>true</active>
    <label>Experience Talk</label>
</RecordType>