force-app/main/default/objects/Recording__c/recordTypes/ntern_Onboarding.recordType-meta.xml
<RecordType>
    <fullName>ntern_Onboarding</fullName>
    <active>true</active>
    <label>İntern Onboarding</label>
</RecordType>