force-app/main/default/objects/Recording__c/recordTypes/Project_Demos.recordType-meta.xml
<RecordType>
    <fullName>Project_Demos</fullName>
    <active>true</active>
    <label>Project Demos</label>
</RecordType>