force-app/main/default/objects/Recording__c/recordTypes/Training.recordType-meta.xml
<RecordType>
    <fullName>Training</fullName>
    <active>true</active>
    <label>Training</label>
</RecordType>