force-app/main/default/objects/Recording__c/listViews/Board_Recording.listView-meta.xml
<ListView>
    <fullName>Board_Recording</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Recording__c.Board_Recording</value>
    </filters>
    <label>Board Recording</label>
</ListView>