force-app/main/default/objects/Recording__c/listViews/Client_Meeting.listView-meta.xml
<ListView>
    <fullName>Client_Meeting</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Client Meeting</label>
</ListView>