force-app/main/default/objects/Recording__c/listViews/Experience_Talk.listView-meta.xml
<ListView>
    <fullName>Experience_Talk</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Recording__c.Experience_Talk</value>
    </filters>
    <label>Experience Talk</label>
</ListView>