force-app/main/default/objects/Recording__c/listViews/Intern_Onboarding.listView-meta.xml
<ListView>
    <fullName>Intern_Onboarding</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Recording__c.ntern_Onboarding</value>
    </filters>
    <label>Intern Onboarding</label>
</ListView>