force-app/main/default/objects/Recording__c/listViews/Project_Demos.listView-meta.xml
<ListView>
    <fullName>Project_Demos</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Recording__c.Project_Demos</value>
    </filters>
    <label>Project Demos</label>
</ListView>