force-app/main/default/objects/Recording__c/listViews/Training.listView-meta.xml
<ListView>
    <fullName>Training</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Recording__c.Training</value>
    </filters>
    <label>Training</label>
</ListView>